@@ -1,6 +1,6 @@
 Package: MTurkR
-Version: 0.6.18
-Date: 2015-11-11
+Version: 0.6.19
+Date: 2015-11-28
 Title: R Client for the MTurk Requester API
 Authors@R: c(person("Thomas J.", "Leeper", role = c("aut", "cre"),
                     email = "thosjleeper@gmail.com"),
