@@ -2,6 +2,7 @@
 
 ## SIGNIFICANT USER-VISIBLE CHANGES ##
 
+* `HITStatus()` will now display any non-empty RequesterAnnotation field for a HIT. (#101)
 * The deprecated argument `print`, which was removed in v0.5, has been fully removed. Use `verbose` instead. (#97)
 * The deprecated functions `mturkrhelp` and `APIReference` have been removed. (#96)
 * `MTurkR.Wizard` has been removed from MTurkR and has been recreated as a separate package. (#95)
